--- a/build.config
+++ b/build.config
@@ -14,7 +14,8 @@ MAIN_PROGRAM_CSOURCEFILES=\
 	ds_array_test\
 	ds_str_test\
 	ds_ll_test\
-	ds_hmap_test
+	ds_hmap_test\
+	ds_plist_test
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -45,7 +46,8 @@ LIBRARY_OBJECT_CSOURCEFILES=\
 	ds_array\
 	ds_str\
 	ds_ll\
-	ds_hmap
+	ds_hmap\
+	ds_plist
 
 # ######################################################################
 # Set each of the source files that must be built. These are all those
@@ -137,7 +139,7 @@ EXTRA_COMPILER_FLAGS=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_CFLAGS=\
-	-std=c99
+-std=c99
 
 
 # ######################################################################
