Added new (empty) module for tree structures.

--- a/build.config
+++ b/build.config
@@ -14,7 +14,10 @@ MAIN_PROGRAM_CSOURCEFILES=\
 	ds_array_test\
 	ds_str_test\
 	ds_ll_test\
-	ds_hmap_test
+	ds_hmap_test\
+	ds_tree_test\
+
+
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -45,7 +48,10 @@ LIBRARY_OBJECT_CSOURCEFILES=\
 	ds_array\
 	ds_str\
 	ds_ll\
-	ds_hmap
+	ds_hmap\
+	ds_tree\
+
+
 
 # ######################################################################
 # Set each of the source files that must be built. These are all those
@@ -75,7 +81,9 @@ HEADERS=\
 	src/ds_array.h\
 	src/ds_str.h\
 	src/ds_ll.h\
-	src/ds_hmap.h
+	src/ds_hmap.h\
+	src/ds_tree.h\
+
 
 
 # ######################################################################
