--- a/build.config
+++ b/build.config
@@ -15,7 +15,9 @@ MAIN_PROGRAM_CSOURCEFILES=\
 	ds_str_test\
 	ds_ll_test\
 	ds_hmap_test\
-	ds_plist_test
+	ds_plist_test\
+	ds_tree_test\
+
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -47,7 +49,9 @@ LIBRARY_OBJECT_CSOURCEFILES=\
 	ds_str\
 	ds_ll\
 	ds_hmap\
-	ds_plist
+	ds_plist\
+	ds_tree\
+
 
 # ######################################################################
 # Set each of the source files that must be built. These are all those
@@ -77,7 +81,9 @@ HEADERS=\
 	src/ds_array.h\
 	src/ds_str.h\
 	src/ds_ll.h\
-	src/ds_hmap.h
+	src/ds_hmap.h\
+	src/ds_tree.h\
+
 
 
 # ######################################################################
