Added android NDK building and swig wrapper
Swig doesn't generate compilable code just yet, so commented it out for
now.

--- a/build.config
+++ b/build.config
@@ -79,6 +79,21 @@ HEADERS=\
 	src/ds_ll.h\
 	src/ds_hmap.h
 
+# ######################################################################
+# If you need need to call your library from other languages, set the
+# SWIG targets here, using 'wrap-$language' as a target. The SWIG_WRAPPERS
+# can be left empty if this is not needed.
+#
+# Note that to use SWIG:
+#  1. It must be installed,
+#  2. The swig-input.swig file must be modified for your project.
+#
+# An example of basic SWIG usage can be found at:
+#        http://swig.org/tutorial.html
+#
+#SWIG_WRAPPERS:=\
+#     wrap-java
+
 
 # ######################################################################
 # Here you must set the list of include paths. Note that the variable
@@ -88,7 +103,8 @@ HEADERS=\
 # You can put as many paths in here as you want to. I've put one in as an
 # example.
 INCLUDE_PATHS=\
-	$(HOME)/include
+   $(HOME)/include\
+
 
 # ######################################################################
 # This is similar to the INCLUDE_PATHS you set above, except that it is
