Fixed the build.config to not overwrite the system env GCC, etc

--- a/build.config
+++ b/build.config
@@ -194,10 +194,10 @@ EXTRA_PROG_LDFLAGS=\
 # compiler command-line options).
 #
 # You can comment this out with no ill-effects.
-GCC=gcc
-GXX=g++
-LD_PROG=gcc
-LD_LIB=gcc
+GCC?=gcc
+GXX?=g++
+LD_PROG?=gcc
+LD_LIB?=gcc
 
 # ######################################################################
 # TODO: Add in a way to override the default linker
