Added swig back into the build process, must change str_v*() functions.

--- a/build.config
+++ b/build.config
@@ -91,8 +91,8 @@ HEADERS=\
 # An example of basic SWIG usage can be found at:
 #        http://swig.org/tutorial.html
 #
-#SWIG_WRAPPERS:=\
-#     wrap-java
+SWIG_WRAPPERS:=\
+     wrap-java
 
 
 # ######################################################################
@@ -103,6 +103,8 @@ HEADERS=\
 # You can put as many paths in here as you want to. I've put one in as an
 # example.
 INCLUDE_PATHS=\
+   /usr/lib/jvm/java-11-openjdk-amd64/include\
+   /usr/lib/jvm/java-11-openjdk-amd64/include/linux
 
 
 # ######################################################################
