--- a/build.config
+++ b/build.config
@@ -12,6 +12,7 @@ VERSION=1.0.5
 # Note that this list is only for C files.
 MAIN_PROGRAM_CSOURCEFILES=\
 	ds_array_test\
+	ds_table_test\
 	ds_str_test\
 	ds_ll_test\
 	ds_hmap_test\
@@ -44,6 +45,7 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 # Note that this list is only for C files.
 LIBRARY_OBJECT_CSOURCEFILES=\
 	ds_array\
+	ds_table\
 	ds_str\
 	ds_ll\
 	ds_hmap\
@@ -75,6 +77,7 @@ LIBRARY_OBJECT_CPPSOURCEFILES=\
 # headers (relative to this directory).
 HEADERS=\
 	src/ds_array.h\
+	src/ds_table.h\
 	src/ds_str.h\
 	src/ds_ll.h\
 	src/ds_hmap.h
