Changes src/head specs to alphabetical

--- a/build.config
+++ b/build.config
@@ -11,12 +11,12 @@ VERSION=1.0.7
 #
 # Note that this list is only for C files.
 MAIN_PROGRAM_CSOURCEFILES=\
-	ds_array_test\
-	ds_table_test\
-	ds_str_test\
-	ds_ll_test\
-	ds_hmap_test\
-	ds_plist_test
+   ds_array_test\
+   ds_hmap_test\
+   ds_ll_test\
+   ds_plist_test\
+   ds_str_test\
+   ds_table_test\
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -44,12 +44,13 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 #
 # Note that this list is only for C files.
 LIBRARY_OBJECT_CSOURCEFILES=\
-	ds_array\
-	ds_table\
-	ds_str\
-	ds_ll\
-	ds_hmap\
-	ds_plist
+   ds_array\
+   ds_hmap\
+   ds_ll\
+   ds_plist\
+   ds_str\
+   ds_table\
+
 
 # ######################################################################
 # Set each of the source files that must be built. These are all those
@@ -76,11 +77,12 @@ LIBRARY_OBJECT_CPPSOURCEFILES=\
 # previous settings, for this setting you must specify the path to the
 # headers (relative to this directory).
 HEADERS=\
-	src/ds_array.h\
-	src/ds_table.h\
-	src/ds_str.h\
-	src/ds_ll.h\
-	src/ds_hmap.h
+   src/ds_array.h\
+   src/ds_hmap.h\
+   src/ds_ll.h\
+   src/ds_str.h\
+   src/ds_table.h\
+
 
 # ######################################################################
 # If you need need to call your library from other languages, set the
