Adds scaffolding for ds_stack datatype.

--- a/build.config
+++ b/build.config
@@ -15,6 +15,7 @@ MAIN_PROGRAM_CSOURCEFILES=\
    ds_hmap_test\
    ds_ll_test\
    ds_plist_test\
+   ds_stack_test\
    ds_str_test\
    ds_table_test\
 
@@ -48,6 +49,7 @@ LIBRARY_OBJECT_CSOURCEFILES=\
    ds_hmap\
    ds_ll\
    ds_plist\
+   ds_stack\
    ds_str\
    ds_table\
 
@@ -80,6 +82,7 @@ HEADERS=\
    src/ds_array.h\
    src/ds_hmap.h\
    src/ds_ll.h\
+   src/ds_stack.h\
    src/ds_str.h\
    src/ds_table.h\
 
