Removes swig to make this compile on Windows

--- a/build.config
+++ b/build.config
@@ -99,8 +99,8 @@ HEADERS=\
 # An example of basic SWIG usage can be found at:
 #        http://swig.org/tutorial.html
 #
-SWIG_WRAPPERS:=\
-     wrap-java
+#SWIG_WRAPPERS:=\
+#wrap-java
 
 
 # ######################################################################
