Adds support for emitting JSON using ds_symtree

--- a/build.config
+++ b/build.config
@@ -17,6 +17,7 @@ MAIN_PROGRAM_CSOURCEFILES=\
    ds_plist_test\
    ds_stack_test\
    ds_str_test\
+   ds_symtree_test\
    ds_table_test\
 
 # ######################################################################
@@ -51,6 +52,7 @@ LIBRARY_OBJECT_CSOURCEFILES=\
    ds_plist\
    ds_stack\
    ds_str\
+   ds_symtree\
    ds_table\
 
 
@@ -84,6 +86,7 @@ HEADERS=\
    src/ds_ll.h\
    src/ds_stack.h\
    src/ds_str.h\
+   src/ds_symtree.h\
    src/ds_table.h\
 
 
