Adds ds_tree module.
NEXT: Complete a small JSON parser to demonstrate usage of ds_tree.

--- a/build.config
+++ b/build.config
@@ -19,6 +19,7 @@ MAIN_PROGRAM_CSOURCEFILES=\
    ds_str_test\
    ds_symtree_test\
    ds_table_test\
+   ds_tree_test\
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -54,6 +55,7 @@ LIBRARY_OBJECT_CSOURCEFILES=\
    ds_str\
    ds_symtree\
    ds_table\
+   ds_tree\
 
 
 # ######################################################################
@@ -88,6 +90,7 @@ HEADERS=\
    src/ds_str.h\
    src/ds_symtree.h\
    src/ds_table.h\
+   src/ds_tree.h\
 
 
 # ######################################################################
