WIP: Adding a JSON parser data structure.

--- a/build.config
+++ b/build.config
@@ -13,6 +13,7 @@ VERSION=1.0.7
 MAIN_PROGRAM_CSOURCEFILES=\
    ds_array_test\
    ds_hmap_test\
+   ds_json_test\
    ds_ll_test\
    ds_plist_test\
    ds_stack_test\
@@ -49,6 +50,7 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 LIBRARY_OBJECT_CSOURCEFILES=\
    ds_array\
    ds_hmap\
+   ds_json\
    ds_ll\
    ds_plist\
    ds_stack\
@@ -85,6 +87,7 @@ LIBRARY_OBJECT_CPPSOURCEFILES=\
 HEADERS=\
    src/ds_array.h\
    src/ds_hmap.h\
+   src/ds_json.h\
    src/ds_ll.h\
    src/ds_stack.h\
    src/ds_str.h\
