WIP: `stringify()` not complete.
NEXT: Complete `stringify()` function.

--- a/build.config
+++ b/build.config
@@ -161,8 +161,10 @@ LIBRARY_PATHS=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_COMPILER_FLAGS=\
-	-DNAME=Value\
-	-W -Wall
+   -W -Wall -Wextra\
+   -Wdouble-promotion\
+   -Wconversion\
+   -Wno-sign-conversion
 
 
 # ######################################################################
