--- a/build.config
+++ b/build.config
@@ -1,7 +1,7 @@
 # ######################################################################
 # First, set your project name and version here.
 PROJNAME=ds
-VERSION=1.0.6
+VERSION=1.0.7
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -11,12 +11,16 @@ VERSION=1.0.6
 #
 # Note that this list is only for C files.
 MAIN_PROGRAM_CSOURCEFILES=\
-	ds_array_test\
-	ds_table_test\
-	ds_str_test\
-	ds_ll_test\
-	ds_hmap_test\
-	ds_plist_test
+   ds_array_test\
+   ds_hmap_test\
+   ds_json_test\
+   ds_ll_test\
+   ds_plist_test\
+   ds_stack_test\
+   ds_str_test\
+   ds_symtree_test\
+   ds_table_test\
+   ds_tree_test\
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -44,12 +48,17 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 #
 # Note that this list is only for C files.
 LIBRARY_OBJECT_CSOURCEFILES=\
-	ds_array\
-	ds_table\
-	ds_str\
-	ds_ll\
-	ds_hmap\
-	ds_plist
+   ds_array\
+   ds_hmap\
+   ds_json\
+   ds_ll\
+   ds_plist\
+   ds_stack\
+   ds_str\
+   ds_symtree\
+   ds_table\
+   ds_tree\
+
 
 # ######################################################################
 # Set each of the source files that must be built. These are all those
@@ -76,11 +85,16 @@ LIBRARY_OBJECT_CPPSOURCEFILES=\
 # previous settings, for this setting you must specify the path to the
 # headers (relative to this directory).
 HEADERS=\
-	src/ds_array.h\
-	src/ds_table.h\
-	src/ds_str.h\
-	src/ds_ll.h\
-	src/ds_hmap.h
+   src/ds_array.h\
+   src/ds_hmap.h\
+   src/ds_json.h\
+   src/ds_ll.h\
+   src/ds_stack.h\
+   src/ds_str.h\
+   src/ds_symtree.h\
+   src/ds_table.h\
+   src/ds_tree.h\
+
 
 # ######################################################################
 # If you need need to call your library from other languages, set the
@@ -147,8 +161,10 @@ LIBRARY_PATHS=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_COMPILER_FLAGS=\
-	-DNAME=Value\
-	-W -Wall
+   -W -Wall -Wextra\
+   -Wdouble-promotion\
+   -Wconversion\
+   -Wno-sign-conversion
 
 
 # ######################################################################
